@@ -1,5 +1,12 @@
 2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>
 
+	* slime.el ([portability] lisp-mode-syntax-table): On Emacs21,
+	make @ a prefix character like it's from Emacs22
+	onward. `slime-symbol-name-at-point' was written with that
+	assumption.
+
+2009-02-27  Tobias C. Rittweiler  <tcr@freebits.de>
+
 	* slime.el (slime-current-parser-state): Wrap `syntax-ppss' in a
 	`save-match-data'. This issue has been reported to the Emacs
 	maintainers.
